# STAR-Semantic-test-adequacy-reasoning-in-AI-assisted-software-testing

./: .gitignore  README.md
backend/: agents.py  graph.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: file-upload.tsx  results-display.tsx
frontend/lib/: api.ts
